--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 
     <a href="/recipes/stroganoff.html">Hamburger Stroganoff</a>
     <a href="/recipes/meatballs.html">Swedish Meatballs</a>
+    <a href="/recipes/tacos.html">Tacos</a>
 </body>
 </html>
